// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component - layout should render 1`] = `
<main
  className="jsx-3359630964 sans-serif "
/>
`;

exports[`component - layout should render with props 1`] = `
<main
  className="jsx-3359630964 sans-serif "
>
  <b>
    #content
  </b>
</main>
`;
